// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Limiter /> renders as large 1`] = `
<div
  className="sc-htpNat cxpXaq"
>
  Child text
</div>
`;

exports[`<Limiter /> renders as medium 1`] = `
<div
  className="sc-bwzfXH hDOArp"
>
  Child text
</div>
`;

exports[`<Limiter /> renders as small 1`] = `
<div
  className="sc-bdVaJa eriKRN"
>
  Child text
</div>
`;

exports[`<Limiter /> renders correctly 1`] = `
<div
  className="sc-bwzfXH hDOArp"
>
  Child text
</div>
`;
